--- a/src/scss/_navigation.scss
+++ b/src/scss/_navigation.scss
@@ -73,8 +73,8 @@
 
   &__search-btn,
   &__color-mode-btn {
-    width: 1.5rem;
-    height: 1.5rem;
+    width: 1.25rem;
+    height: 1.25rem;
     svg {
       width: 100%;
       height: 100%;
