--- a/src/scss/_utilities.scss
+++ b/src/scss/_utilities.scss
@@ -179,10 +179,6 @@ $box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
   }
 }
 
-.no-scroll {
-  // overflow: hidden;
-}
-
 .grid-container {
   display: grid;
   gap: 1.5rem;
